--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -84,7 +85,7 @@
 
             <div class="p-howto mw700">
                 <h3>How To Study<span>学習の流れ</span></h3>
-                <div class="p-howtoBox">
+                <div class="p-howtoBox top-to-down">
                     <p class="p-howtoBox__title p-howtoBox--number01">Netflixで予習</p>
                     <p class="p-howtoBox__txt">指定された作品の該当シーンをNexアプリを利用して視聴。
                         どんなシーンか、どんな単語が出てくるかなどを確認！</p>
@@ -95,12 +96,12 @@
                         <li>音声に合わせて字幕を音読（シャドーイング）</li>
                     </ul>
                 </div>
-                <div class="p-howtoBox">
+                <div class="p-howtoBox top-to-down">
                     <p class="p-howtoBox__title p-howtoBox--number02">オンラインで授業！</p>
                     <p class="p-howtoBox__txt">ZOOMを利用していざ授業！実際に出てくる文法や単語の解説はもちろん、
                         学んだことを応用したロールプレイングを行い理解を深めます。</p>
                 </div>
-                <div class="p-howtoBox">
+                <div class="p-howtoBox top-to-down">
                     <p class="p-howtoBox__title p-howtoBox--number03">Netflixで復習</p>
                     <p class="p-howtoBox__txt">授業で学んだことを復習！授業後に資料が共有されるのでそちらも是非活用してください。
                         次回の授業を開始する前に理解度確認テストを実施します！</p>
@@ -122,5 +123,7 @@
     <footer>
         <p>Copyright © since 2020 Nex All Rights Reserved.</p>
     </footer>
+
+    <script type="text/javascript" src="./js/fadeIn.js"></script>
 </body>
 </html>
